# DataStructureExercise

./: CMakeLists.txt  DataStructure.md  README.md
include/: DataSturucture.h
src/: LinkList.c  main.c
